# Granite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  config.yaml  coverage.xml  docker-compose.ghcr.yml  docker-compose.override.yml.example  docker-compose.yml  generate_password.py  pyproject.toml  release.ps1  render.yaml  requirements.txt  run.py  user-settings.json
.claude/: settings.local.json
.github/workflows/: docker-publish.yml  hf-space-restart.yml  pages.yml  security-scan.yml  test.yml
backend/: __init__.py  config.py  dependencies.py  main.py  plugins.py  schemas.py  themes.py  utils.py
backend/core/: __init__.py  decorators.py  exceptions.py  logging_config.py  middleware.py  rate_limits.py  security.py
backend/routers/: __init__.py  api_config.py  auth.py  drawio.py  folders.py  formatter.py  images.py  notes.py  pages.py  plugins.py  plugins_git.py  plugins_pdf.py  tags.py  templates.py  themes.py
backend/services/: __init__.py  folder_service.py  formatter_service.py  image_service.py  note_service.py  search_service.py  settings_service.py  tag_service.py  template_service.py
docs/: API.md  AUTHENTICATION.md  CNAME  CODEMIRROR_BUNDLE.md  DRAWIO.md  FEATURES.md  GIT_AUTHENTICATION.md  MATHJAX.md  MERMAID.md  PLUGINS.md  PLUGIN_GIT_SYNC.md  PLUGIN_NOTE_STATISTICS.md  SETUP_RELEASE_WORKFLOW.md  SPREADSHEETS.md  TAGS.md  TEMPLATES.md  TESTING.md  TEST_ISOLATION.md  THEMES.md  _config.yml  index.html  index.md  robots.txt  sitemap.xml
docs/templates/: daily-journal.md  meeting-notes.md  project-plan.md
documentation/: API.md  AUTHENTICATION.md  ENVIRONMENT_VARIABLES.md  FEATURES.md  MATHJAX.md  PLUGINS.md  PLUGIN_GIT_SYNC.md  PLUGIN_PDF_EXPORT.md  RELEASE_WORKFLOW.md  TEMPLATES.md
documentation/templates/: daily-journal.md  meeting-notes.md  project-plan.md
frontend/: app-modular.js  app.js  index.html  login.html
frontend/css/: mobile-panes.css
frontend/modules/: config.js  drawio.js  editor.js  export.js  favorites.js  folder-operations.js  folder-render.js  folders.js  graph.js  helpers.js  images.js  init.js  markdown.js  metadata.js  mobile-panes.js  notes.js  panes.js  plugins.js  search.js  settings.js  sidebar.js  spreadsheet.js  state.js  stats.js  tags.js  templates.js  themes.js  tiptap.js  ui.js
plugins/: git.py  note_stats.py  pdf_export.py
scripts/: README.md  fix_end_of_file.py  fix_trailing_whitespace.py  release.sh  run_tests.bat  run_tests.sh
scripts/build-codemirror/: build-codemirror.js  codemirror-bundle-entry.js
scripts/build-tiptap/: build-tiptap.js  package-lock.json  package.json  tiptap-bundle-entry.js
tests/: README.md  conftest.py  test_accessibility.html  test_all.html  test_authentication.py  test_datetime_settings.py  test_drawio.py  test_favorites.py  test_favorites_ui.html  test_file_operations.py  test_git_plugin.py  test_git_plugin_ui.html  test_graph_folder_links.py  test_markdown_render.html  test_panes_ui.html  test_pdf_export_plugin.py  test_plugin_api.py  test_plugin_settings_persistence.py  test_plugin_ui.html  test_search_ui.html  test_security_core.py  test_security_utils.py  test_spreadsheet.py  test_tag_parsing.py  test_templates.py  test_toc.html  test_unsplash_banner.html  test_user_settings.py
tests/e2e/: conftest.py  test_app.py  test_drawio_e2e.py  test_login.py  test_notes.py  test_panes.py  test_spreadsheet_e2e.py
themes/: ayu-dark.css  ayu-light.css  catppuccin-mocha.css  cobalt2.css  dark.css  dracula.css  github-dark.css  github-light.css  light.css  monokai.css  nord.css  one-dark-pro.css  solarized-dark.css  solarized-light.css  tokyo-night.css  vs-blue.css  vue-high-contrast.css
